Update LLM